--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "babykick-web",
+  "name": "bkb",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.11",
+    "react-bootstrap-button-loader": "^2.0.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
   "scripts": {
