--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-compound-timer": "^1.1.5",
     "react-dom": "^16.9.0",
     "react-moment-countdown": "^0.3.0",
+    "react-pure-loaders": "^3.0.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
